cmake_minimum_required(VERSION 3.8)
project(pvos)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory("cviko1")
add_subdirectory("cviko2")
add_subdirectory("cviko3")
add_subdirectory("cviko4")
add_subdirectory("cviko5")
add_subdirectory("cviko6")
add_subdirectory("cviko7")
add_subdirectory("cviko8")
add_subdirectory("cviko9")
add_subdirectory("cviko10")
add_subdirectory("cviko11")
add_subdirectory("cviko12")
add_subdirectory("cviko13")

